// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Avatar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    
    <div
      class="StyledBox-sc-13pk1d4-0 kVFNVq StyledAvatar-sc-1suyamb-1 sc-iuStju dWcTVs"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-user fa-2x "
        data-icon="circle-user"
        data-prefix="fas"
        focusable="false"
        role="img"
        style="color: rgb(183, 190, 211); background: white;"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M399 384.2C376.9 345.8 335.4 320 288 320H224c-47.4 0-88.9 25.8-111 64.2c35.2 39.2 86.2 63.8 143 63.8s107.8-24.7 143-63.8zM512 256c0 141.4-114.6 256-256 256S0 397.4 0 256S114.6 0 256 0S512 114.6 512 256zM256 272c39.8 0 72-32.2 72-72s-32.2-72-72-72s-72 32.2-72 72s32.2 72 72 72z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iaZwhG StyledAvatar-sc-1suyamb-1 sc-iuStju dWcTVs"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf kEsRji"
      >
        JD
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With First Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kVFNVq StyledAvatar-sc-1suyamb-1 sc-iuStju dWcTVs"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf kEsRji"
      >
        J
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Full Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kVFNVq StyledAvatar-sc-1suyamb-1 sc-iuStju dWcTVs"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf kEsRji"
      >
        JD
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Image 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bkfLqh StyledAvatar-sc-1suyamb-1 sc-iuStju dWcTVs"
    />
    
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Last Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kVFNVq StyledAvatar-sc-1suyamb-1 sc-iuStju dWcTVs"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf kEsRji"
      >
        D
      </div>
    </div>
  </div>
</div>
`;
